VSE separate images increases file size abnormally #41086

Closed
opened 2014-07-15 19:19:12 +02:00 by Ângelo Brandão Benetti · 14 comments

In official Blender 2.71, by spliting a strip with a sequence of 722 images with Separate images function bpy.ops.sequencer.images_separate(length=x)
the .blend file jumps from 600 Kb to something near 132 Mb, without any packed file.

It seems a bit exagerated compared to the same steps done in 2.70a, where it increases from 570 kb to 4.4 Mb, much more reasonable.

System Information
Scientific Linux (CentOS like)
Linux lajeado 2.6.32-431.20.3.el6.x86_64 #1 SMP Thu Jun 19 14:01:59 CDT 2014 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: 0f:00.0 VGA compatible controller: NVIDIA Corporation GT200GL [Quadro FX 3800] (rev a1)

Blender Version
Broken: 2.71 hash: 9337574
Worked: 2.70a

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

In official Blender 2.71, by spliting a strip with a sequence of 722 images with Separate images function bpy.ops.sequencer.images_separate(length=x) the .blend file jumps from 600 Kb to something near 132 Mb, without any packed file. It seems a bit exagerated compared to the same steps done in 2.70a, where it increases from 570 kb to 4.4 Mb, much more reasonable. **System Information** Scientific Linux (CentOS like) Linux lajeado 2.6.32-431.20.3.el6.x86_64 #1 SMP Thu Jun 19 14:01:59 CDT 2014 x86_64 x86_64 x86_64 GNU/Linux Graphics card: 0f:00.0 VGA compatible controller: NVIDIA Corporation GT200GL [Quadro FX 3800] (rev a1) **Blender Version** Broken: 2.71 hash: 9337574 Worked: 2.70a **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @AngeloBenetti

Added subscriber: @AngeloBenetti
Member

Added subscriber: @jta

Added subscriber: @jta

Added subscriber: @mont29

Added subscriber: @mont29

I cannot reproduce that here (linux64), neither with official 2.71 nor current trunk, I’m always getting same results (6.8 Mo for about 150 images - which I found already rather high, tbh!).

I cannot reproduce that here (linux64), neither with official 2.71 nor current trunk, I’m always getting same results (6.8 Mo for about 150 images - which I found already rather high, tbh!).

Added subscriber: @Sergey

Added subscriber: @Sergey

Please always attahc all files needed to reproduce the issue.

I can only think you've got really long sequence and separating it for a single frame, which leads to loads to individual strips. This would for sure bump file size dramatically.

Please always attahc all files needed to reproduce the issue. I can only think you've got really long sequence and separating it for a single frame, which leads to loads to individual strips. This would for sure bump file size dramatically.

@Sergey would you consider bump from 500k to 6.8M (from 1 strip to 150) the expected amount of increase mem? That would make about 40k per strip, sounds a bit high to me, tbh…

Also, I can have a look at that myself, if you want (just assign it to me in this case).

@Sergey would you consider bump from 500k to 6.8M (from 1 strip to 150) the expected amount of increase mem? That would make about 40k per strip, sounds a bit high to me, tbh… Also, I can have a look at that myself, if you want (just assign it to me in this case).
Bastien Montagne was assigned by Sergey Sharybin 2014-07-21 17:40:27 +02:00

40K indeed looks a bit suspicious. Definitely worth checking. Please go ahead :)

40K indeed looks a bit suspicious. Definitely worth checking. Please go ahead :)

Also guess "uncofirmed" should be removed now?

Also guess "uncofirmed" should be removed now?

Found the culprit - we copy everything from the old sequence into each new ones… including the stripdata, which for image sequences is an array with one item per image!

Following patch fixes this in the simplest way possible, not sure it would be considered good enough for master, Sergey?

P93: #41086

diff --git a/source/blender/editors/space_sequencer/sequencer_edit.c b/source/blender/editors/space_sequencer/sequencer_edit.c
index 973d6a9..dcf13db 100644
--- a/source/blender/editors/space_sequencer/sequencer_edit.c
+++ b/source/blender/editors/space_sequencer/sequencer_edit.c
@@ -1919,9 +1919,12 @@ static int sequencer_separate_images_exec(bContext *C, wmOperator *op)
 				strip_new = seq_new->strip;
 				strip_new->us = 1;
 
-				/* new stripdata */
-				se_new = strip_new->stripdata;
+				/* new stripdata (only one element now!) */
+				/* Note this assume all elements (images) have the same dimension, since we only copy the name here. */
+				se_new = MEM_reallocN(strip_new->stripdata, sizeof(*se_new));
 				BLI_strncpy(se_new->name, se->name, sizeof(se_new->name));
+				strip_new->stripdata = se_new;
+
 				BKE_sequence_calc(scene, seq_new);
 
 				if (step > 1) {

Found the culprit - we copy everything from the old sequence into each new ones… including the stripdata, which for image sequences is an array with one item per image! Following patch fixes this in the simplest way possible, not sure it would be considered good enough for master, Sergey? [P93: #41086](https://archive.blender.org/developer/P93.txt) ```diff diff --git a/source/blender/editors/space_sequencer/sequencer_edit.c b/source/blender/editors/space_sequencer/sequencer_edit.c index 973d6a9..dcf13db 100644 --- a/source/blender/editors/space_sequencer/sequencer_edit.c +++ b/source/blender/editors/space_sequencer/sequencer_edit.c @@ -1919,9 +1919,12 @@ static int sequencer_separate_images_exec(bContext *C, wmOperator *op) strip_new = seq_new->strip; strip_new->us = 1; - /* new stripdata */ - se_new = strip_new->stripdata; + /* new stripdata (only one element now!) */ + /* Note this assume all elements (images) have the same dimension, since we only copy the name here. */ + se_new = MEM_reallocN(strip_new->stripdata, sizeof(*se_new)); BLI_strncpy(se_new->name, se->name, sizeof(se_new->name)); + strip_new->stripdata = se_new; + BKE_sequence_calc(scene, seq_new); if (step > 1) { ```

This issue was referenced by 2e436173aa

This issue was referenced by 2e436173aae1ff715eb1d19aebbf7243ba4afc5c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2e436173aa.

Closed by commit 2e436173aa.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41086
No description provided.