source/blender/editors/space_sequencer/sequencer_edit.c
@@ -1919,9 +1919,12 @@ static int sequencer_separate_images_exec(bContext *C, wmOperator *op)
 				strip_new = seq_new->strip;
 				strip_new->us = 1;
 
-				/* new stripdata */
-				se_new = strip_new->stripdata;
+				/* new stripdata (only one element now!) */
+				/* Note this assume all elements (images) have the same dimension, since we only copy the name here. */
+				se_new = MEM_reallocN(strip_new->stripdata, sizeof(*se_new));
 				BLI_strncpy(se_new->name, se->name, sizeof(se_new->name));
+				strip_new->stripdata = se_new;
+
 				BKE_sequence_calc(scene, seq_new);
 
 				if (step > 1) {
